[metadata]
name = errorpp
version = 0.0.7
author = Deyao Chen
author_email = chendeyao000@gmail.com
description = Automatically propagate the error in an expression symbolically
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/de0ch/errorpp
project_urls =
    Bug Tracker = https://github.com/de0ch/errorpp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = errorpp
install_requires = 
    sympy == 1.9
    antlr4-python3-runtime == 4.7.2

[options.entry_points]
console_scripts =
    errorpp = errorpp.__main__:main